# bkb

./: Cargo.toml  README.md  build.rs
src/: booklet.rs  cache.rs  gui.rs  main.rs  pdf_creator.rs  pdf_render.rs
ui/: app.slint  store.slint
