[package]
name = "bcfbh"
version = "0.2.1"
edition = "2024"
description = "Booklet Creator For Binding by Hand"

[dependencies]
oxidize-pdf = "2.0.0"
pdfium-render = "0.8.37"
# pdfium-auto = {version="0.3.0", features=[]}
image = "0.25"
native-dialog = {version = "0.9.6", features = ["windows_dpi_awareness", "windows_visual_styles"]}
webbrowser = "*"

[profile.release]
lto = true
strip = true
panic = "abort"
