[package]
name = "bkb"
version = "0.2.2"
edition = "2024"
description = "Booklet Builder"

[dependencies]
oxidize-pdf = "2.5.1"
pdfium-render = "0.9.0"
# pdfium-auto = {version="0.3.0", features=[]}
image = "0.25"
native-dialog = {version = "0.9.6", features = ["windows_dpi_awareness", "windows_visual_styles"]}
webbrowser = "1.2.0"
# argh = "0.1.19"
# lexopt = "0.3.2"

[dependencies.slint]
version = "1.16.0"
features = ["backend-winit", "renderer-skia"]

[build-dependencies]
slint-build = "1.16.0"
lucide-slint = "1.8.0"
# twill = { version = "0.2", features = ["slint"] }


[profile.release]
lto = true
strip = true
panic = "abort"
