[package]
name = "bkb"
version = "1.0.1"
edition = "2024"
description = "Booklet Builder"

[dependencies]
# oxidize-pdf = "2.5.1"
# pdfium-render = "0.9.0"
# # pdfium-auto = {version="0.3.0", features=[]}
image = "0.25"
native-dialog = {version = "0.9.6", features = ["windows_dpi_awareness", "windows_visual_styles"]}
# timed-map= "1.7"
# webbrowser = "1.2.0"
# argh = "0.1.19"
# lexopt = "0.3.2"


[dependencies.lopdf]
version = "0.43.0"

[dependencies.slint]
version = "1.17"
features = ["backend-winit", "renderer-femtovg-wgpu"]

[build-dependencies]
slint-build = "1.17"
lucide-slint = "1.8.0"
# twill = { version = "0.2", features = ["slint"] }


[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"
